--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "protobufjs": "^7.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "utility-types": "^3.10.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
   },
-  "browser":{
+  "browser": {
     "fs": false
   }
 }
